升级工程配置以支持2024.1.7版本idea